--- a/libnova/Makefile.in
+++ b/libnova/Makefile.in
@@ -192,8 +192,11 @@ VERSION = @VERSION@
 WINDRES = @WINDRES@
 WINMM_LIBS = @WINMM_LIBS@
 WINSOCK_LIBS = @WINSOCK_LIBS@
+XML2_CONFIG = @XML2_CONFIG@
 XMLRPC_CFLAGS = @XMLRPC_CFLAGS@
 XMLRPC_LIBS = @XMLRPC_LIBS@
+XML_CPPFLAGS = @XML_CPPFLAGS@
+XML_LIBS = @XML_LIBS@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
