--- a/Makefile.in
+++ b/Makefile.in
@@ -299,6 +299,7 @@ MINOR_VERSION = @MINOR_VERSION@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
 NMEDIT = @NMEDIT@
+OBJCOPY = $(host_alias)-objcopy
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OTOOL = @OTOOL@
@@ -384,11 +385,13 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = . libnova
+SUBDIRS = . libnova std_data
 hskymon_SOURCES = \
-	 main.c calcpa.c fc.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.c votable.c votable.h remoteObjects.h configfile.h hskymon_icon.h google_icon.h
+	 main.c calcpa.c fc.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.c votable.c votable.h remoteObjects.h configfile.h hskymon_icon.h google_icon.h esostd.h
 
-CLEANFILES = *~
+junk = mdebug.abi32 gnu.attributes ctors eh_frame eh_frame_hdr MIPS.abiflags reginfo comment pdr note.gnu.build-id
+objcopyflags = -S $(addprefix --remove-section=.,$(junk))
+CLEANFILES = *~ 
 DISTCLEANFILES = .deps/*.P
 AM_CPPFLAGS = -DLOCALEDIR=\""$(localedir)"\"
 @HAVE_WINDRES_FALSE@HSKYMON_RES = 
