--- a/Makefile.in
+++ b/Makefile.in
@@ -391,7 +391,7 @@ hskymon_SOURCES = \
 
 junk = mdebug.abi32 gnu.attributes ctors eh_frame eh_frame_hdr MIPS.abiflags reginfo comment pdr note.gnu.build-id
 objcopyflags = -S $(addprefix --remove-section=.,$(junk))
-CLEANFILES = *~ 
+CLEANFILES = *~ libnova/*~ std_data/*~
 DISTCLEANFILES = .deps/*.P
 AM_CPPFLAGS = -DLOCALEDIR=\""$(localedir)"\"
 @HAVE_WINDRES_FALSE@HSKYMON_RES = 
