--- a/version.h.in
+++ b/version.h.in
@@ -1,10 +1,7 @@
-//  MaCoPiX = Mascot Construnctive Pilot for X
-//                                (ActX / Gtk+ Evolution)
-//    A unified desktop mascot program
-//    for UNIX / X Window System with Gdk Environment
-//
-//       version.h  : Version header  for  MaCoPiX
-//                                         copyright K.Chimari 2002-4
+//    hskymon  from HDS OPE file Editor
+//          New SkyMonitor for Subaru Gen2
+//   
+//                                           2012.10.22  A.Tajitsu
 //
 //
 //  This program is free software; you can redistribute it and/or modify
