--- a/config.h.in
+++ b/config.h.in
@@ -112,6 +112,9 @@
 /* Use Gtk+2.x instead of Gtk+1.2 */
 #undef USE_GTK2
 
+/* Define if you use gtkmacintegration library. */
+#undef USE_GTKMACINTEGRATION
+
 /* Define if you use OpenSSL to support SSL. */
 #undef USE_SSL
 
