--- a/config.h.in
+++ b/config.h.in
@@ -112,7 +112,7 @@
 /* Use Gtk+2.x instead of Gtk+1.2 */
 #undef USE_GTK2
 
-/* Define if you use gtkmacintegration library. */
+/* With gtkmacintegration */
 #undef USE_GTKMACINTEGRATION
 
 /* Define if you use OpenSSL to support SSL. */
