--- a/configure.ac
+++ b/configure.ac
@@ -86,18 +86,20 @@ dnl GtkMACIntegration
 			    [with_gtkmac=yes])
  
  if test x"${with_gtkmac}" = "xyes"; then
- if test "$os_osx" == yes; then
- AC_DEFINE([USE_GTKMACINTEGRATION],[],[With gtkmacintegration])
-    GTKMAC_CFLAGS="`pkg-config gtk-mac-integration-gtk2 --cflags`"
-    GTKMAC_LIBS="`pkg-config gtk-mac-integration-gtk2 --libs`"
+   if test "$os_osx" == yes; then
+     AC_DEFINE([USE_GTKMACINTEGRATION],[],[With gtkmacintegration])
+     GTKMAC_CFLAGS="`pkg-config gtk-mac-integration-gtk2 --cflags`"
+     GTKMAC_LIBS="`pkg-config gtk-mac-integration-gtk2 --libs`"
+   else
+     GTKMAC_CFALGS=""
+     GTKMAC_LIBS=""
+   fi
  else
-    GTKMAC_CFALGS=""
-    GTKMAC_LIBS=""
+   GTKMAC_CFALGS=""
+   GTKMAC_LIBS=""
  fi
- else
-    GTKMAC_CFALGS=""
-    GTKMAC_LIBS=""
-fi
+ AC_SUBST(GTKMAC_LIBS)
+ AC_SUBST(GTKMAC_CFLAGS)
 
 dnl  XMLRPC
  AC_ARG_WITH(xmlrpc,
