--- a/Makefile.in
+++ b/Makefile.in
@@ -391,7 +391,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = . libnova std_data
 hskymon_SOURCES = \
-	 main.c calcpa.c fc.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c votable.h remoteObjects.h configfile.h hskymon_icon.h google_icon.h esostd.h ssl.h
+	 main.c calcpa.c fc.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c votable.h remoteObjects.h configfile.h hskymon_icon.h google_icon.h spline_icon.h esostd.h ssl.h
 
 CLEANFILES = *~ libnova/*~ std_data/*~
 DISTCLEANFILES = .deps/*.P
