--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ MAJOR_VERSION=2
 MINOR_VERSION=9
 MICRO_VERSION=7
 BUILD_REVISION=0
-EXTRA_VERSION=-20170626
+EXTRA_VERSION=
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION$EXTRA_VERSION
 
 dnl set $target
