--- a/Makefile.in
+++ b/Makefile.in
@@ -100,16 +100,16 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(man1dir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_hskymon_OBJECTS = main.$(OBJEXT) calcpa.$(OBJEXT) fc.$(OBJEXT) \
-	adc.$(OBJEXT) lunar.$(OBJEXT) solar.$(OBJEXT) earth.$(OBJEXT) \
-	mercury.$(OBJEXT) venus.$(OBJEXT) mars.$(OBJEXT) \
-	jupiter.$(OBJEXT) saturn.$(OBJEXT) uranus.$(OBJEXT) \
-	neptune.$(OBJEXT) pluto.$(OBJEXT) rise_set.$(OBJEXT) \
-	sidereal_time.$(OBJEXT) vsop87.$(OBJEXT) julian_day.$(OBJEXT) \
-	utility.$(OBJEXT) transform.$(OBJEXT) precession.$(OBJEXT) \
-	nutation.$(OBJEXT) dynamical_time.$(OBJEXT) \
-	http-client.$(OBJEXT) configfile.$(OBJEXT) skymon.$(OBJEXT) \
-	treeview.$(OBJEXT) telstat.$(OBJEXT) remoteObjects.$(OBJEXT) \
-	votable.$(OBJEXT)
+	fc_output.$(OBJEXT) adc.$(OBJEXT) lunar.$(OBJEXT) \
+	solar.$(OBJEXT) earth.$(OBJEXT) mercury.$(OBJEXT) \
+	venus.$(OBJEXT) mars.$(OBJEXT) jupiter.$(OBJEXT) \
+	saturn.$(OBJEXT) uranus.$(OBJEXT) neptune.$(OBJEXT) \
+	pluto.$(OBJEXT) rise_set.$(OBJEXT) sidereal_time.$(OBJEXT) \
+	vsop87.$(OBJEXT) julian_day.$(OBJEXT) utility.$(OBJEXT) \
+	transform.$(OBJEXT) precession.$(OBJEXT) nutation.$(OBJEXT) \
+	dynamical_time.$(OBJEXT) http-client.$(OBJEXT) \
+	configfile.$(OBJEXT) skymon.$(OBJEXT) treeview.$(OBJEXT) \
+	telstat.$(OBJEXT) remoteObjects.$(OBJEXT) votable.$(OBJEXT)
 hskymon_OBJECTS = $(am_hskymon_OBJECTS)
 hskymon_LDADD = $(LDADD)
 am__DEPENDENCIES_1 =
@@ -419,22 +419,17 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = . libnova std_data debian
+SUBDIRS = . libnova std_data debian sample
 hskymon_SOURCES = \
-	 main.c calcpa.c fc.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c votable.h remoteObjects.h configfile.h hskymon_icon.h google_icon.h esostd.h ssl.h gen2.h post_lamost.h post_smoka.h post_hst.h post_eso.h
+	 main.c calcpa.c fc.c fc_output.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c votable.h remoteObjects.h configfile.h hskymon_icon.h google_icon.h esostd.h ssl.h gen2.h post_lamost.h post_smoka.h post_hst.h post_eso.h
 
-CLEANFILES = *~ libnova/*~ std_data/*~ debian/*~
+CLEANFILES = *~ libnova/*~ std_data/*~ debian/*~ sample/*~
 DISTCLEANFILES = .deps/*.P
 AM_CPPFLAGS = -DLOCALEDIR=\""$(localedir)"\"
 @HAVE_WINDRES_FALSE@HSKYMON_RES = 
 @HAVE_WINDRES_TRUE@HSKYMON_RES = hskymon.res
 EXTRA_DIST = autogen.sh\
 	     README.jp\
-	     standard.list\
-             brightest.lst\
-             messier.lst\
-	     sample.list\
-	     samplePS.list\
              subaru_logo.ico\
              hskymon.ico\
              hskymon_res.rc.in\
@@ -582,6 +577,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dynamical_time.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/earth.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fc_output.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/http-client.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/julian_day.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/jupiter.Po@am__quote@
