--- a/sample/Makefile.in
+++ b/sample/Makefile.in
@@ -268,7 +268,8 @@ EXTRA_DIST = \
 	messier.lst\
 	sample.list\
 	samplePS.list\
-	standard.list
+	standard.list\
+	PN_Acker_J2000.lst
 
 all: all-am
 
