--- a/std_data/Makefile.in
+++ b/std_data/Makefile.in
@@ -267,7 +267,10 @@ EXTRA_DIST = \
 	irafstd.lst\
 	irafstd.xml\
 	README\
-	mkexample.sh
+	mkexample.sh\
+	mk_acker2000.c\
+	PN_Acker_in.lst\
+	PN_Acker.xml
 
 all: all-am
 
