Added access to Gemini archive

--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@ PACKAGE=hskymon
 
 dnl version number
 MAJOR_VERSION=3
-MINOR_VERSION=2
+MINOR_VERSION=3
 MICRO_VERSION=0
 BUILD_REVISION=0
 EXTRA_VERSION=
@@ -142,6 +142,17 @@ dnl   -----------------
 
 dnl XML2
 AM_PATH_XML2(2.2.6,, AC_MSG_ERROR([xml-2.2.6 or later is required]))
+
+dnl json-c
+PKG_CHECK_MODULES(JSONC, json-c, [:], [:])
+if test "x$JSONC_LIBS" != "x"; then
+	CFLAGS="$CFLAGS $JSONC_CFLAGS"
+	LIBS="$LIBS $JSONC_LIBS"
+	AC_MSG_CHECKING([if json-c is available])
+	AC_MSG_RESULT(yes)
+else
+        AC_MSG_ERROR([json-c is required.])
+fi
 
 dnl libm
 AC_SEARCH_LIBS([cos], [m], [], [AC_MSG_ERROR([unable to find the cos() function])])
