GResource base icon management

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS    = hskymon
 SUBDIRS = . libnova std_data debian sample
 hskymon_SOURCES   =\
-	 main.c calcpa.c fc.c fc_output.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c json_parse.c votable.h remoteObjects.h configfile.h hskymon_icon.h google_icon.h esostd.h ssl.h gen2.h post.h post_sdss.h post_lamost.h post_smoka.h post_hst.h post_eso.h get_gemini.h
+	 main.c calcpa.c fc.c fc_output.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c json_parse.c resources.c votable.h remoteObjects.h configfile.h esostd.h ssl.h gen2.h post.h post_sdss.h post_lamost.h post_smoka.h post_hst.h post_eso.h get_gemini.h resources.h
 
 CLEANFILES      = *~ libnova/*~ std_data/*~ debian/*~ sample/*~
 DISTCLEANFILES  = .deps/*.P
@@ -19,6 +19,7 @@ endif
 
 EXTRA_DIST = autogen.sh\
 	     README.jp\
+	     gresource.xml\
              subaru_logo.ico\
              hskymon.ico\
              hskymon_res.rc.in\
@@ -37,11 +38,28 @@ EXTRA_DIST = autogen.sh\
              ar_d2.xpm\
              ar_d3.xpm
 
+BUILT_SOURCES=resources.c resources.h
+
 man_MANS = hskymon.1
+
+CLEANFILES      += icons/*~
+DISTCLEANFILES  = 
+AM_CPPFLAGS = -DLOCALEDIR=\""$(localedir)"\"
+
+CLEANFILES += $(BUILT_SOURCES)
+
+resource_files=$(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir) --generate-dependencies $(srcdir)/gresource.xml)
+
+resources.h:
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) --target=$@ --sourcedir=$(srcdir) --generate-header $(srcdir)/gresource.xml
+
+resources.c: gresource.xml $(resource_files) resources.h
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) --target=$@ --sourcedir=$(srcdir) --generate-source $(srcdir)/gresource.xml
 
 INCLUDES        = @GTK_CFLAGS@ $(GTKMAC_CFLAGS) $(XMLRPC_CFLAGS) $(XML_CPPFLAGS) $(DISABLE_DEPRECATED)
 LDADD           = @GTK_LIBS@ $(GTKMAC_LIBS) $(WINMM_LIBS) $(WINSOCK_LIBS) $(XMLRPC_LIBS) $(XML_LIBS) $(HSKYMON_RES)
 
+CFLAGS+= -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE
 
 GZIP_ENV =
 BZIP2_ENV =
